environments/gloo-gateway/gateway-api/live/tiered-app-config/base/tiered-app-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tiered-app-ns-1
  namespace: ns-1
spec:
  hostnames:
  - "tiered-app.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /ns-1
      backendRefs:
        - name: restless-sky
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: tiered-app-ns-1-route-policies
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tiered-app-ns-2
  namespace: ns-2
spec:
  hostnames:
  - "tiered-app.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /ns-2
      backendRefs:
        - name: throbbing-field
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: tiered-app-ns-2-route-policies
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tiered-app-ns-3
  namespace: ns-3
spec:
  hostnames:
  - "tiered-app.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /ns-3
      backendRefs:
        - name: hidden-sky
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: tiered-app-ns-3-route-policies
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tiered-app-ns-4
  namespace: ns-4
spec:
  hostnames:
  - "tiered-app.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /ns-4
      backendRefs:
        - name: blue-hill
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: tiered-app-ns-4-route-policies
